[package]
name = "battle-net-oauth-async-std"
version = "0.1.0"
authors = ["Nerothos"]
edition = "2018"
documentation = "https://docs.rs/battle-net-oauth-async-std"
readme = "README.md"
repository = "https://github.com/nerothos/battle-net-oauth-async-std"
keywords = ["api", "oauth", "battlenet", "blizzard"]
license = "MIT"
description = "Async-std compatible Rust crate to request a Battle.net OAuth token using Surf"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.0.0-alpha.2"
serde = "1.0.110"
async-std = "1.6.0"
base64 = "0.12.1"